--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="container my-3">
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand logo-font" href="#"
+          <a class="navbar-brand logo-font" href="index.html"
             ><span class="bg-dark text-light rounded pt-2 px-1 fs-4"
               >East-West</span
             ><span class="pt-2 px-1 fs-4">Times</span></a
@@ -44,8 +44,8 @@
               </li>
             </ul>
             <form class="d-flex" role="search">
-              <a class="text-capitalize mx-3 text-dark" href="#">news</a>
-              <a class="text-capitalize mx-3 text-dark" id="show-blog" href="#">blogs</a>
+              <a class="text-capitalize mx-3 text-dark" href="index.html">news</a>
+              <a class="text-capitalize mx-3 text-dark" href="blogs.html">blogs</a>
             </form>
           </div>
         </div>
@@ -152,272 +152,7 @@
         </div>
       </section>
 
-      <!-- // bolg section  -->
-      <section class="container">
-        <div id="blogs-container" class="d-none">
-          <div class="card mb-3 mx-auto p-3" style="max-width: 1000px">
-            <div class="row g-0">
-              <div class="col-md-4">
-                <img
-                  src="images/EeVw-DOXgAAMtKk.jpg"
-                  class="img-fluid rounded-start"
-                  alt="..."
-                />
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">
-                    what is the difference between var, let and const in
-                    javascript?
-                  </h5>
-                  <p class="card-text">
-                    Var, let and const are basically used for variable
-                    declaration in javascript. When you declare a variable you
-                    by using var, you can redeclare it. But you can't redaclare
-                    a variable if you are use let or const. By using var and let
-                    you can reassign a variable. But you can't reassign a
-                    variable if you declare it by using const. it is the simple
-                    difference.
-                  </p>
-                  <div
-                    class="d-flex row justify-content-between align-items-center mt-3"
-                  >
-                    <div class="author col-8 col-md-4 col-sm-4 mb-1 d-flex">
-                      <div class="author-img" style="margin-right: 15px">
-                        <img src="images/euhan.jpg" class="img-fluid rounded"
-                        alt"">
-                      </div>
-                      <div>
-                        <p style="font-size: 13px; font-weight: 600; margin: 0">
-                          Euhan Sarkar
-                        </p>
-                        <p
-                          class=""
-                          style="font-size: 12px; font-weight: 500; margin: 0"
-                        >
-                          2022-08-25 03:09:16
-                        </p>
-                      </div>
-                    </div>
-                    <div class="col-4 col-md-2 mb-1 col-sm-4">
-                      <i class="fa-solid fa-eye"></i>399
-                    </div>
-                    <div class="col-6 col-md-3 mt-1 d-none d-md-block">4.5</div>
-                    <div
-                      class="bg-dark text-md-center text-light rounded p-1 col-auto mt-1 col-md-3 col-sm-3"
-                    >
-                      <!-- Button trigger modal -->
-                      <a
-                        type="button"
-                        onclick="loadShowDetails('${catagoryItem._id}')"
-                        data-bs-toggle="modal"
-                        data-bs-target="#showDetailsModal"
-                        >show more <i class="fa-solid fa-arrow-right"></i
-                      ></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="card mb-3 mx-auto p-3" style="max-width: 1000px">
-            <div class="row g-0">
-              <div class="col-md-4">
-                <img
-                  src="images/arrow.png"
-                  class="img-fluid rounded-start"
-                  alt="..."
-                />
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">
-                    what is the difference between var, let and const in
-                    javascript?
-                  </h5>
-                  <p class="card-text">
-                    Var, let and const are basically used for variable
-                    declaration in javascript. When you declare a variable you
-                    by using var, you can redeclare it. But you can't redaclare
-                    a variable if you are use let or const. By using var and let
-                    you can reassign a variable. But you can't reassign a
-                    variable if you declare it by using const. it is the simple
-                    difference.
-                  </p>
-                  <div
-                    class="d-flex row justify-content-between align-items-center mt-3"
-                  >
-                    <div class="author col-8 col-md-4 col-sm-4 mb-1 d-flex">
-                      <div class="author-img" style="margin-right: 15px">
-                        <img src="images/euhan.jpg" class="img-fluid rounded"
-                        alt"">
-                      </div>
-                      <div>
-                        <p style="font-size: 13px; font-weight: 600; margin: 0">
-                          Euhan Sarkar
-                        </p>
-                        <p
-                          class=""
-                          style="font-size: 12px; font-weight: 500; margin: 0"
-                        >
-                          2022-08-25 03:09:16
-                        </p>
-                      </div>
-                    </div>
-                    <div class="col-4 col-md-2 mb-1 col-sm-4">
-                      <i class="fa-solid fa-eye"></i>399
-                    </div>
-                    <div class="col-6 col-md-3 mt-1 d-none d-md-block">4.5</div>
-                    <div
-                      class="bg-dark text-md-center text-light rounded p-1 col-auto mt-1 col-md-3 col-sm-3"
-                    >
-                      <!-- Button trigger modal -->
-                      <a
-                        type="button"
-                        onclick="loadShowDetails('${catagoryItem._id}')"
-                        data-bs-toggle="modal"
-                        data-bs-target="#showDetailsModal"
-                        >show more <i class="fa-solid fa-arrow-right"></i
-                      ></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="card mb-3 mx-auto p-3" style="max-width: 1000px">
-            <div class="row g-0">
-              <div class="col-md-4">
-                <img
-                  src="images/map_filter_reduce.png"
-                  class="img-fluid rounded-start"
-                  alt="..."
-                />
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">
-                    what is the difference between var, let and const in
-                    javascript?
-                  </h5>
-                  <p class="card-text">
-                    Var, let and const are basically used for variable
-                    declaration in javascript. When you declare a variable you
-                    by using var, you can redeclare it. But you can't redaclare
-                    a variable if you are use let or const. By using var and let
-                    you can reassign a variable. But you can't reassign a
-                    variable if you declare it by using const. it is the simple
-                    difference.
-                  </p>
-                  <div
-                    class="d-flex row justify-content-between align-items-center mt-3"
-                  >
-                    <div class="author col-8 col-md-4 col-sm-4 mb-1 d-flex">
-                      <div class="author-img" style="margin-right: 15px">
-                        <img src="images/euhan.jpg" class="img-fluid rounded"
-                        alt"">
-                      </div>
-                      <div>
-                        <p style="font-size: 13px; font-weight: 600; margin: 0">
-                          Euhan Sarkar
-                        </p>
-                        <p
-                          class=""
-                          style="font-size: 12px; font-weight: 500; margin: 0"
-                        >
-                          2022-08-25 03:09:16
-                        </p>
-                      </div>
-                    </div>
-                    <div class="col-4 col-md-2 mb-1 col-sm-4">
-                      <i class="fa-solid fa-eye"></i>399
-                    </div>
-                    <div class="col-6 col-md-3 mt-1 d-none d-md-block">4.5</div>
-                    <div
-                      class="bg-dark text-md-center text-light rounded p-1 col-auto mt-1 col-md-3 col-sm-3"
-                    >
-                      <!-- Button trigger modal -->
-                      <a
-                        type="button"
-                        onclick="loadShowDetails('${catagoryItem._id}')"
-                        data-bs-toggle="modal"
-                        data-bs-target="#showDetailsModal"
-                        >show more <i class="fa-solid fa-arrow-right"></i
-                      ></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="card mb-3 mx-auto p-3" style="max-width: 1000px">
-            <div class="row g-0">
-              <div class="col-md-4">
-                <img
-                  src="images/template.png"
-                  class="img-fluid rounded-start"
-                  alt="..."
-                />
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">
-                    what is the difference between var, let and const in
-                    javascript?
-                  </h5>
-                  <p class="card-text">
-                    Var, let and const are basically used for variable
-                    declaration in javascript. When you declare a variable you
-                    by using var, you can redeclare it. But you can't redaclare
-                    a variable if you are use let or const. By using var and let
-                    you can reassign a variable. But you can't reassign a
-                    variable if you declare it by using const. it is the simple
-                    difference.
-                  </p>
-                  <div
-                    class="d-flex row justify-content-between align-items-center mt-3"
-                  >
-                    <div class="author col-8 col-md-4 col-sm-4 mb-1 d-flex">
-                      <div class="author-img" style="margin-right: 15px">
-                        <img src="images/euhan.jpg" class="img-fluid rounded"
-                        alt"">
-                      </div>
-                      <div>
-                        <p style="font-size: 13px; font-weight: 600; margin: 0">
-                          Euhan Sarkar
-                        </p>
-                        <p
-                          class=""
-                          style="font-size: 12px; font-weight: 500; margin: 0"
-                        >
-                          2022-08-25 03:09:16
-                        </p>
-                      </div>
-                    </div>
-                    <div class="col-4 col-md-2 mb-1 col-sm-4">
-                      <i class="fa-solid fa-eye"></i>399
-                    </div>
-                    <div class="col-6 col-md-3 mt-1 d-none d-md-block">4.5</div>
-                    <div
-                      class="bg-dark text-md-center text-light rounded p-1 col-auto mt-1 col-md-3 col-sm-3"
-                    >
-                      <!-- Button trigger modal -->
-                      <a
-                        type="button"
-                        onclick="loadShowDetails('${catagoryItem._id}')"
-                        data-bs-toggle="modal"
-                        data-bs-target="#showDetailsModal"
-                        >show more <i class="fa-solid fa-arrow-right"></i
-                      ></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
+      <!-- // footer section  -->
 
     <footer class="text-center">
       <p style="font-weight: 500">Copyright 2022 East-West Times</p>
